// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playthrough Creator Container Renders with an edited incomplete playthrough 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#592a29",
      "height": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginLeft": "5%",
        "marginRight": "5%",
        "width": "90%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontSize": 18,
          "marginBottom": 5,
          "marginTop": 5,
        }
      }
    >
      Playthrough Name
    </Text>
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderRadius": 5,
          "color": "#000000",
          "fontSize": 18,
          "padding": 10,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value="New name"
    />
  </View>
  <View
    style={
      Object {
        "marginLeft": "5%",
        "marginRight": "5%",
        "width": "90%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontSize": 18,
          "marginBottom": 5,
          "marginTop": 5,
        }
      }
    >
      Game
    </Text>
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderRadius": 5,
          "width": "100%",
        }
      }
    >
      <View>
        <RCTPicker
          items={
            Array [
              Object {
                "label": "Game 0",
                "textColor": undefined,
                "value": "g0",
              },
              Object {
                "label": "Game 1",
                "textColor": undefined,
                "value": "g1",
              },
            ]
          }
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          selectedIndex={1}
          style={
            Array [
              Object {
                "height": 216,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginTop": 10,
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "backgroundColor": "#e84641",
          "borderRadius": 5,
          "color": "#ffffff",
          "fontSize": 30,
          "height": 50,
          "marginLeft": "5%",
          "marginRight": "5%",
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": "90%",
        }
      }
    >
      Submit
    </Text>
  </View>
</View>
`;

exports[`Playthrough Creator Container Renders with the default incomplete playthrough 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#592a29",
      "height": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginLeft": "5%",
        "marginRight": "5%",
        "width": "90%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontSize": 18,
          "marginBottom": 5,
          "marginTop": 5,
        }
      }
    >
      Playthrough Name
    </Text>
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderRadius": 5,
          "color": "#000000",
          "fontSize": 18,
          "padding": 10,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "marginLeft": "5%",
        "marginRight": "5%",
        "width": "90%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontSize": 18,
          "marginBottom": 5,
          "marginTop": 5,
        }
      }
    >
      Game
    </Text>
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderRadius": 5,
          "width": "100%",
        }
      }
    >
      <View>
        <RCTPicker
          items={
            Array [
              Object {
                "label": "None Selected",
                "textColor": undefined,
                "value": undefined,
              },
              Object {
                "label": "Game 0",
                "textColor": undefined,
                "value": "g0",
              },
            ]
          }
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          selectedIndex={0}
          style={
            Array [
              Object {
                "height": 216,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginTop": 10,
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "backgroundColor": "#e84641",
          "borderRadius": 5,
          "color": "#ffffff",
          "fontSize": 30,
          "height": 50,
          "marginLeft": "5%",
          "marginRight": "5%",
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": "90%",
        }
      }
    >
      Submit
    </Text>
  </View>
</View>
`;

exports[`Playthrough Creator Container Renders with the empty initial state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#592a29",
      "height": "100%",
    }
  }
/>
`;
